--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist && cp -r server/services dist/",
+    "build": "node scripts/download-ytdlp.js && vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist && cp -r server/services dist/ && cp yt-dlp dist/ && chmod +x dist/yt-dlp",
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
-    "postinstall": "mkdir -p downloads"
+    "postinstall": "mkdir -p downloads && chmod +x yt-dlp",
+    "download-ytdlp": "node scripts/download-ytdlp.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
