--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
-    "build": "node scripts/download-ytdlp.js && vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist && cp -r server/services dist/ && cp yt-dlp dist/ && chmod +x dist/yt-dlp",
+    "build": "node scripts/download-ytdlp.js && vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist && cp -r server/services dist/ && (cp yt-dlp dist/ 2>/dev/null || cp yt-dlp.exe dist/ 2>/dev/null || echo 'yt-dlp binary not found') && (chmod +x dist/yt-dlp 2>/dev/null || echo 'chmod skipped on Windows')",
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
-    "postinstall": "mkdir -p downloads && chmod +x yt-dlp",
-    "download-ytdlp": "node scripts/download-ytdlp.js"
+    "postinstall": "mkdir -p downloads && (chmod +x yt-dlp 2>/dev/null || chmod +x yt-dlp.exe 2>/dev/null || echo 'chmod skipped on Windows')",
+    "download-ytdlp": "node scripts/download-ytdlp.js",
+    "test-ytdlp": "node scripts/test-ytdlp.js",
+    "cleanup-ytdlp": "node scripts/cleanup-ytdlp.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
